# prediction-market-agent

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  README_hackathon.md  abstract_agent.py  agent.py  agent_thinks_more.ipynb  always_yes_agent.py  ape-config.yaml  autogen_agent.py  build.sh  build_and_push.sh  crew_agent.py  crewai_multiple_agent.ipynb  install_hooks.sh  langchain_agent.py  main.py  manifold.py  mypy.ini  pyproject.toml  requirements.txt  restart_app_deployments.sh  restart_pods.sh  setup.py  utils.py
.devcontainer/: devcontainer.json
.github/actions/python_prepare/: action.yaml
.github/workflows/: python_cd.yaml  python_ci.yaml  security.yaml
.github/workflows/actions/: python_prepare.yaml
examples/: tavily_q_and_a.py
examples/cloud_deployment/: agent.py  deploy.py
notebooks/: resolved_markets_analysis.ipynb
notebooks/agent_benchmarks/: test_kelly_bet_difference-05.ipynb
notebooks/cow_vs_swapr_analysis/: seer_market_analysis.ipynb
prediction_market_agent/: __init__.py  manifold.py  omen.py  run_agent.py  run_reset_game.py  streamlit_utils.py  utils.py
prediction_market_agent/abis/: agentcommunication.abi.json  agentregistry.abi.json  omen_fpmm.abi.json  omen_fpmm_conditionaltokens.abi.json  simpletreasury.abi.json
prediction_market_agent/agents/: __init__.py  abstract.py  all_agents.py  always_yes.py  autogen.py  autogen_agent.py  crewai.py  crewai_agent.py  custom_agent.py  goal_manager.py  identifiers.py  langchain.py  langchain_agent.py  llamaindex_agent.py  logprobs_oai_model.py  metagpt.py  metagpt_agent.py  ollama_langchain_agent.py  ollama_llamaindex_agent.py  top_n_oai_model.py  utils.py
prediction_market_agent/agents/advanced_agent/: deploy.py
prediction_market_agent/agents/alert_agent/: alert_on_slack.py
prediction_market_agent/agents/arbitrage_agent/: data_models.py  deploy.py  prompt.py
prediction_market_agent/agents/autogen_general_agent/: README.md  agents.py  deploy.py  farcaster_agent.py  farcaster_client.py  farcaster_handler.py  prompts.py  social_agent.py
prediction_market_agent/agents/berlin1_agent/: polysent_agent.py
prediction_market_agent/agents/berlin2_agent/: openai_search_agent_high.py  openai_search_agent_variable.py
prediction_market_agent/agents/bert_agent/: train.py
prediction_market_agent/agents/blockchain_coding_agent/: agents.py  app.py  functions.py  models.py  prompts.py  run_agent.py  run_agent04_read.py  run_agent04_write.py  streamlit_console.py  web3py_index.html
prediction_market_agent/agents/coinflip_agent/: coinflip_agent.py  deploy.py  deploy_seer.py
prediction_market_agent/agents/correlated_questions_agent/: correlated_questions_agent.py
prediction_market_agent/agents/crewai_subsequential_agent/: benchmark.py  crewai_agent_subquestions.py  deploy.py  (+1 more)
prediction_market_agent/ai_models/: abstract_ai_models.py  llama_ai_models.py  openai_ai_models.py
prediction_market_agent/connectors/: __init__.py  blockrun.py
prediction_market_agent/data_models/: market_data_models.py
prediction_market_agent/db/: agent_communication.py  blockchain_message_table_handler.py  blockchain_transaction_fetcher.py  constants.py  db_storage.py  evaluated_goal_table_handler.py  long_term_memory_table_handler.py  models.py  pinecone_handler.py  prompt_table_handler.py  replicated_markets_table_handler.py  report_table_handler.py  sql_handler.py
prediction_market_agent/deploy/: deploy.py  utils.py
prediction_market_agent/development_tools/: prophet_agent_tester.py  test_all_prophet_agents.py  test_logprobs_in_prophet.py  test_single_agent.py
prediction_market_agent/markets/: all_markets.py  manifold.py  omen.py
prediction_market_agent/tools/: betting_strategies.py  crewai_tools.py  custom_crewai_tools.py  gnosis_rpc.py  google_search.py  gtypes.py  message_utils.py  ollama_utils.py  openai_utils.py  prediction_market.py  streamlit_utils.py  tool_exception_handler.py  types.py  utils.py  web3_utils.py  web_scrape.py  web_scrape_structured.py
prediction_market_agent/utils/: test_markets.py
scripts/: agent_app.py  arbitrage_skeleton.py  ask_question_to_agent.py  autogen_v2.py  benchmark_ofv_resolver.py  bet_omen.py  challenger_reality_accuracy.py  create_class.py  create_class_for_general_agent.py  delete_agent_db_entries.py  deployed_general_agent_viewer.py  embed_question.py  extract_treasury.py  fetch_from_rpc.py  fibonacci_create_new_func.py  funds_to_keeping_token.py  generate_images_for_markets.py  get_mech_services.py  image_app.py  llm_randomness.py  mech_client_schema.py  memory.py  metaculus_bot_tournament.py  monitor_app.py  open_deep_search_agent.py  purge_messages.py  purge_wallet.py  read_cond_tokens_autogen.py  read_contract.py  read_contract_autogen.py  redeem_market.py  replicate_for_hackathon.py  replicator_stats.py  reset_balance_anvil.py  resolve_markets.py  resolve_replicated_on_omen.py  script1.py  simple_benchmark.py  web3_scan_utils.py
scripts/blockchain_agent/: run_agent04_read.py  run_agent04_write.py
tests/: conftest.py  test_chat_history.py  test_deploy.py  test_manifold.py  test_omen.py  test_tools.py  test_utils.py  utils.py
tests/agents/: test_goal_manager.py  test_microchain.py
tests/ai_models/: test_llama_ai_models.py
tests/connectors/: test_blockrun.py
tests/db/: conftest.py  test_blockchain_message_table_handler.py  test_db_storage.py  test_evaluated_goal_table_handler.py  test_long_term_memory_table_handler.py  test_nft_game_round_table_handler.py  test_pinecone_handler.py  test_prompt_handler.py  test_prompt_table_handler.py  test_sql_handler.py
tests/endpoints/: test_prediction_prophet.py  test_utils.py  utils.py
tests/mech/: test_mech_local.py
tests/replicator/: test_omen_replicate.py
tests/social_media/: test_twitter_handler.py
tests/tools/: test_betting_strategies.py  test_prediction_market.py
tests_integration_with_local_chain/: README.md  conftest.py
tests_integration_with_local_chain/nft_agents/: test_agent_communication.py  test_simple_treasury.py
(+215 files in other folders)
